log
Thu Apr 16 08:05:43 PM UTC 2026: 
 hashmap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:20: error: passing argument 1 of ‘hash’ makes pointer from integer without a cast [-Wint-conversion]
   62 |     int pos = hash(*key, map -> capacity);
      |                    ^~~~
      |                    |
      |                    char
hashmap.c:28:19: note: expected ‘char *’ but argument is of type ‘char’
   28 | long hash( char * key, long capacity) {
      |            ~~~~~~~^~~
hashmap.c:63:71: error: comparison between pointer and integer [-Werror]
   63 |     while(map -> buckets[pos] != NULL || map -> buckets[pos] -> value != -1){
      |                                                                       ^~
hashmap.c:66:12: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   66 |     return pos;
      |            ^~~
hashmap.c:61:6: note: declared here
   61 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
692160f
Thu Apr 16 08:06:04 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:71: error: comparison between pointer and integer [-Werror]
   63 |     while(map -> buckets[pos] != NULL || map -> buckets[pos] -> value != -1){
      |                                                                       ^~
hashmap.c:66:12: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   66 |     return pos;
      |            ^~~
hashmap.c:61:6: note: declared here
   61 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
96a0406
Thu Apr 16 08:06:30 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:69: error: comparison between pointer and integer [-Werror]
   63 |     while(map -> buckets[pos] != NULL || map -> buckets[pos] -> key != -1){
      |                                                                     ^~
hashmap.c:66:12: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   66 |     return pos;
      |            ^~~
hashmap.c:61:6: note: declared here
   61 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
63feeab
Thu Apr 16 08:06:47 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:77: error: comparison between pointer and integer [-Werror]
   63 |     while(map -> buckets[pos] != NULL || (int *) map -> buckets[pos] -> key != -1){
      |                                                                             ^~
hashmap.c:66:12: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   66 |     return pos;
      |            ^~~
hashmap.c:61:6: note: declared here
   61 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
f4fc1b6
Thu Apr 16 08:07:02 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:61: error: ‘*(map->buckets + (sizetype)((long unsigned int)pos * 8))’ is a pointer; did you mean to use ‘->’?
   63 |     while(map -> buckets[pos] != NULL || map -> buckets[pos].key != -1){
      |                                                             ^
      |                                                             ->
hashmap.c:66:12: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   66 |     return pos;
      |            ^~~
hashmap.c:61:6: note: declared here
   61 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
85f9faa
Thu Apr 16 08:08:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:42: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   63 |     while(map -> buckets[pos] != NULL || (int) map -> buckets[pos] -> key != NULL){
      |                                          ^
hashmap.c:63:75: error: comparison between pointer and integer [-Werror]
   63 |     while(map -> buckets[pos] != NULL || (int) map -> buckets[pos] -> key != NULL){
      |                                                                           ^~
hashmap.c:66:12: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   66 |     return pos;
      |            ^~~
hashmap.c:61:6: note: declared here
   61 | void insertMap(HashMap * map, char * key, void * value) {
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
a1e9992
Thu Apr 16 08:08:32 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:42: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   63 |     while(map -> buckets[pos] != NULL || (int) map -> buckets[pos] -> key != NULL){
      |                                          ^
hashmap.c:63:75: error: comparison between pointer and integer [-Werror]
   63 |     while(map -> buckets[pos] != NULL || (int) map -> buckets[pos] -> key != NULL){
      |                                                                           ^~
cc1: all warnings being treated as errors
5f3d6f8
Thu Apr 16 08:08:43 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
f5691bf
Thu Apr 16 08:12:49 PM UTC 2026: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
6025ac1
Thu Apr 16 08:15:35 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
38ce119
Thu Apr 16 08:16:54 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:69:20: error: assignment to ‘long int’ from ‘Pair *’ makes integer from pointer without a cast [-Wint-conversion]
   69 |     map -> current = map -> buckets[pos];
      |                    ^
fbd8608
Thu Apr 16 08:17:15 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ebebcd9
Thu Apr 16 08:17:57 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:62:24: error: comparison between pointer and integer [-Werror]
   62 |     if(map -> capacity == NULL || map -> capacity == 0) return;
      |                        ^~
cc1: all warnings being treated as errors
8713005
Thu Apr 16 08:18:10 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6456110
Thu Apr 16 08:19:16 PM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
94237b9
Thu Apr 16 08:21:42 PM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
729ca20
Thu Apr 16 08:22:34 PM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:12: error: comparison between pointer and integer [-Werror]
   63 |     if(pos == NULL) return;
      |            ^~
cc1: all warnings being treated as errors
70a392a
Thu Apr 16 08:22:57 PM UTC 2026: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
037182f
Thu Apr 16 08:23:32 PM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
5a5fd7d
Thu Apr 16 08:23:59 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2740e87
Thu Apr 16 08:24:25 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
1d6a47a
Thu Apr 16 08:26:46 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
13909dd
Thu Apr 16 08:27:11 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
249f7c0
Thu Apr 16 08:27:44 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
b482269
Thu Apr 16 08:30:37 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
f434568
